# Function-Caller-Agent

./: .gitignore  Makefile  README.md  app.py  pyproject.toml
bash/: execute_linters.sh
src/: backend.py  chatbot.py  manual_agent.py  shelf_agent.py
src/utils/: __init__.py  callbacks.py  misc.py  tools.py
